correct z-index

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -150,7 +150,6 @@
       font-size: 46px;
       line-height: 40px;
       letter-spacing: -1px;
-      z-index: -1;
     }
 
     &__contact-toggler-label::before {
@@ -252,6 +251,10 @@
           background-color: transparent;
         }
       }
+    }
+
+    &__contact-toggler:checked ~ &__title {
+      z-index: -1;
     }
   }
 }
